	      (showing of the value(s)).
	  - Make sure to unset the links value in left.php which is used in pql_left_htmlify_userlist()
	    to get a list of users in a branch/subunit fold.
	    + Fix the output in frame if showUsers is unset.
	  - Increase the parent counter correctly in config_ldap.php to make fold/unfold work on the
	    correct fold.

	GUI layout changes
	  - Don't show the Kerberos info in the user add details page if KERBEROS isn't an option
	    to choose from.
	  - Don't output the '@' separator between recipient part and email domain if there IS no
	    domain to output in the user add details page.
	  - Change wording of 'Miscellaneous' in tables/domain_details-owner.inc to 'Additional information'
	    which is ... better.
	  - When adding a webserver or DNS domain to a domain/branch, offer to update additionalDomainName
	    and QLC object(s).
	    + 'Update QLC object(s)' checked by default.
	    + Change 'Create DNS object' to checked by default.
	  - Decode DN and all values in pql_create_ldif().
	  - Separate the 'PHP Extensions needed' in 'Home->phpQLAdmin Configuration->Test LDAP-Connection'.
	    + Add checks for more modules: idn, mhash, memcache, gd and krb5.
	    + Note about enabling ACI's if test w/o ACI failed, but test w/ ACI worked.
	  - Move the 'Force Strong Passwords' out of 'Plugin configuration' and into 'Behaviour config'
	    (a couple of lines down).
	  - Manage (i.e. SHOW only) Sudo Administration in Computers->Global and Computers-[physical server].
	  - Show a 'DNS Administration' in Computers->Global (and a list of ALL DNS domains in a
	    'DNS Zones - Global' below the Global branch).
	  - Support setting TXT records for hosts in DNS manager.
	  - Support changing aRecords globaly (replace IP1 with IP2 in the whole database).

	API changes
	  - Rewrite (simplify) the API. Move the following function into include/pql.inc as methods
	    of the pql class:
	      include/pql_search.inc:pql_search(),