@@ -141,6 +141,8 @@ phpQLAdmin 2.3.6 TO BE ANNOUNCED
 	    + Fix the output in frame if showUsers is unset.
 	  - Increase the parent counter correctly in config_ldap.php to make fold/unfold work on the
 	    correct fold.
+	  - Fix some array usage bugs in dump_object.php
+	    + Don't output the '--- DEBUG ---' stuf.
 
 	GUI layout changes
 	  - Don't show the Kerberos info in the user add details page if KERBEROS isn't an option
